@@ -7,6 +7,14 @@
 	* call.c (convert_like_real) <case ck_user>: Call mark_exp_read
 	instead of mark_rvalue_use.
 
+	Backport from mainline
+	2019-01-31  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/88983 - ICE with switch in constexpr function.
+	* constexpr.c (cxx_eval_switch_expr): Use SWITCH_COND and SWITCH_BODY.
+	(cxx_eval_constant_expression) <case COND_EXPR>: Don't look for the
+	label in the else branch if we found it in the then branch.
+
 2019-02-05  Marek Polacek  <polacek@redhat.com>
 
 	Backported from mainline
